--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<!DOCTYPE <html>
+<!DOCTYPE <html>  <!--document type html/html5//--> 
 </html>
 <html lang="en">
+  <!--all this head thing! works behind the scenes//-->
   <head>
+    <!--the below 3 meta lines can be ignored as they are set automatically
+    by the framework like bootstrap//-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>synus</title> <!--this is the title of the page, simply name of the tab in a browser, I've changed it to sinus//-->
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet"><!--html is like the structure of the doc while CSS is the style
+    This above line is simply telling browser how to get to stylesheet//-->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
