understand the body

--- a/index.html
+++ b/index.html
@@ -22,9 +22,20 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
+  <!--body is what you see on the page,
+  it consists of javascript and the text respresented in html tags,
+  h1 to h6 are like main heading to sub sub headings in a news paper
+  and there are paragraph tags too//-->
   <body>
-    <h1>Hello, world!</h1>
-
+    <h1>Hello, world!</h1> <!--opening a tag <h1> and closing </h1>//-->
+    <h2>sub header</h2>
+    <h3>sub sub</h3> <!--most people stop at using h3 because others below are too small//-->
+    <h4>sub sub sub</h4>
+    <h5>sub sub sub sub</h5>
+    <h6>sub sub sub sub sub</h6>
+    <p>Once upon a time there is only HTML and I'm learning it now</p> <!--and finally a paragraph tag//--> 
+    
+    <!--the below thing is javascript and just ignore it for now//-->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
